src/test/resources/regression/frontends/error/xlang/Array8.scala
/* Copyright 2009-2014 EPFL, Lausanne */

object Array8 {

  def foo(a: Array[Int]): Array[Int] = {
    a
  }

}
